[package]
name = "esp32-test"
version = "0.1.0"
authors = ["procrastimax <mmeheykeroth@protonmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.0", features = ["binstart"] }
esp-idf-hal = { version = "0.40.1" }


[build-dependencies]
embuild = "0.30.4"
